--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   avatar           : "profile.png"
   name             : "Zijian Wu"
   pronouns         : # example: "she/her"  
-  bio              : "Researchers and engineers in the field of robotics"
-  location         : "Guangzhou, China"
+  bio              : "Engineers & Researchers"
+  location         : "GuangZhou(Canton), China"
   employer         : "HKUST-GZ"
   uri              : # URL
   email            : "robotwzj@gmail.com" 
