--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "GuangZhou(Canton), China"
   employer         : "HKUST(GZ)"
   uri              : # URL
-  email            : "robotwzj@gmail.com" 
+  email            : "zwu819@connect.hkust-gz.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
